<resources>
    <!-- From GMS Console: 653881162314-7mfa1tift9iiksl8ob7g1n6o6qj6rllc.apps.googleusercontent.com -->
    <!-- From Firebase generated: 666377868857-6b3mldm7i4d3ppvv5u865aufhc90suu2.apps.googleusercontent.com-->
    <string name="app_name">Умное зеркало</string>

    <string name="retry">Повторить</string>
    <string name="you_was_sign_out">Вы были разлогинены</string>
    <string name="common_network_error">Ошибка загрузки. Проверьте подключение к сети и повторите попытку.</string>

    <string name="main_accessibility_account_button">Открыть аккаунт</string>

    <string name="main_currency_usd">1 USD = %.2f руб.</string>
    <string name="main_currency_eur">1 EUR = %.2f руб.</string>
    <string name="title_activity_preference">PreferenceActivity</string>

    <string name="preference_header">Дебаг-настройки</string>
    <string name="preference_camera">Камера включена?</string>

    <string name="account_title">Ваш аккаунт</string>
    <string name="account_sign_out">Выйти из аккаунта</string>
    <string name="account_photo_content_description">Аватар</string>
    <string name="account_uid">UID: %s</string>
    <string name="account_display_name">Display name: %s</string>
    <string name="account_email">Email: %s</string>
    <string name="account_email_is_verified">Email is verified: %s</string>
    <string name="account_metadata">Metadata: %s</string>
    <string name="account_multifactor">Multifactor: %s</string>
    <string name="account_phone">Phone: %s</string>
    <string name="account_provider_id">Provider id: %s</string>
    <string name="account_tenat_id">Tenat id: %s</string>
    <string name="account_camera_enabled">Камера включена?</string>
    <string name="account_ads_enabled">Реклама включена?</string>
    <string name="account_artices_enabled">Статьи включены?</string>
    <string name="account_currencies_enabled">Валюта включена?</string>
    <string name="account_weather_enabled">Погода включена?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getLocation">Для отображения погоды, включите геолокацию</string>
    <string name="cityNotFound">Город не найден</string>
    <string name="enterCityName">Введите название города</string>
    <string name="week">Неделя</string>
    <string name="day">День</string>
    <string name="hourMinute">HH:mm</string>
    <string name="fullTimeWeather">yyyy-mm-dd hh:mm</string>
    <string name="dateWeather">yyyy-mm-dd</string>
    <string name="reverseDateWeather">dd-mm-yyyy</string>
    <string name="timeItem">Время:</string>
    <string name="dateItem">Дата:</string>
    <string name="tempItem">Погода:</string>
    <string name="noDataWeather">Нет данных</string>
    <string name="windSpeed">Скорость ветра (м/с)</string>
    <string name="humidity">Влажность</string>
    <string name="currency">Валюта</string>
    <string name="history">История</string>
    <string name="current">Текущие</string>
</resources>